Archive2/3c/7ce3c1a1b35d4c/output
main.cpp: In constructor 'thing::thing()':
main.cpp:5:33: error: increment of read-only location '(thing*)this'
         const_cast<thing*>(this)++;
                                 ^
main.cpp:5:33: error: lvalue required as increment operand
