Archive2/3c/7ce3c1a1b35d4c/main.cpp
#include <iostream>
struct thing {
    thing() {
        std::cout << this << "\n";
        const_cast<thing*>(this)++;
        std::cout << this << "\n";
    }
};

int main() {
    thing t;
}